# Final-env-Jime

./: package.xml  setup.py
archive/ui/: index.html
hardware/esp32_motors/: esp32_motors.ino
jime_core/: esp32_bridge.py  host_robot_logic.py  setup.cfg  setup.py  state_monitor.py  ultrasonic_driver.py  web_streamer.py
jime_core/jime_core/: archived_logic.py  host_robot_logic.py  index.html  save1_host_robot_logic.py  save1_index.html  save2_host_robot_logic.py  start_bridge.py  vision_node.py  web_controller.py  web_streamer.py
jime_core/jime_core/jime_esp32/: jime_esp32.ino
jime_core/jime_core/save/: led_commander.py  save01_host_robot_logic.py  save25_host_robot_logic.py  save2_index.html
jime_core/launch/: jime_launch.py
jime_core/test/: led_test.py
launch/: jime_launch.py
